--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,8 +1,22 @@
 {
   "development": {
     "username": "postgres",
-    "password": "123456789",
+    "password": "PassPostgress",
     "database": "ejCodeFirst",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
+  },
+  "test": {
+    "username": "postgres",
+    "password": "PassPostgress",
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
+  },
+  "production": {
+    "username": "postgres",
+    "password": "PassPostgress",
+    "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
